--- a/src/assets/components/clock/clock.css
+++ b/src/assets/components/clock/clock.css
@@ -9,6 +9,18 @@
     position: relative;  
     z-index: 0;  
   }
+
+.clock-inner {
+    background-color: whitesmoke;
+    width: 550px;
+    height: 550px;
+    border-radius: 50%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;  
+    z-index: 1;  
+  }
   
   .clock {
     font-size: 4em;
@@ -19,7 +31,7 @@
     justify-content: center;
     align-items: center;
     position: absolute;  
-    z-index: 2;  
+    z-index: 3;  
     top: 50%;  
     left: 50%;  
     transform: translate(-30%, 40%);
